--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1070,7 +1070,30 @@ export EDITOR=vim
    }
 
    function reportgen_set_target_vars() {
-    targetdir_csvforpdf="targetdir-with-csv-for-pdf";
+     targetdir_csvforpdf="targetdir-with-csv-for-pdf";
+
+     dirforprep="csvfilesforprep";
+     
+     srcfile01competitoranalysis="01-Competitive-Analysis.csv"
+     targetfile_competitoranalysis="1-competitor-analysis.csv"
+
+     srcfile03relatedquestions="03-Related-Questions.csv"
+     targetfile_relatedquestions="2-related-questions.csv"
+
+     srcfile04impterms="04-Important-Terms.csv"
+     targetfile_impterms="3-z-important-terms.csv"
+
+     srcfile02competitorcontentoutline="02-Competitors-Outlines.csv"
+     targetfile_competitorcontentoutline="4-Competitor-Outlines.csv"
+
+     srcfile05alttext="05-Alt-Texts-Used-in-Top-Ranking-Contents.csv"
+     targetfile_alttext="5-Alt-Text-Used-in-Top-Ranking-Contents.csv"
+
+     targetfile_kwvolumecpc="6-kw-cpc-volume-data.pdf"
+
+     srcfilePAAfile="*paa*"
+     targetfile_paanewtitlebank="7-new-title-topic-bank.csv"
+
    }
 
    function report_prep_answerpub_csv_csvlook() {
@@ -1153,6 +1176,20 @@ export EDITOR=vim
         printf "\nSkipping PAA as data not availabe."
       fi
 
+   }
+
+   function report_prep_paa_csv() {
+      ##7
+      if file_present $srcfilePAAfile
+       then
+         ## PAA
+         csvcut $dirforprep/$srcfilePAAfile -l \
+          | sed -e 's/line_number/No./g' -e "s/PAA Title/ New Article Title & Topic Candidates/g"  \
+          -e "s/URL Title/ Blog Post Title Bank/g" \
+          > $targetdir_csvforpdf/$targetfile_paanewtitlebank;
+       else
+        printf "\nSkipping PAA as data not availabe."
+      fi
    }
 
 
