--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1207,10 +1207,11 @@ export EDITOR=vim
       srcdockerimage="amit213sf/ubuntu-tailscale-ssh-app:v1.9"
       targetdirincontainer="/opt/temp-ubuntu-datadir"
       targetcontanername="temp-ubuntu-node-with-ts"
+      targetcontainerhostname="tempworkernode-on-$hostname"
       mkdir -p $targettmpdatadir;
       docker run --privileged -it -d \
       -v `pwd`/$targettmpdatadir:$targetdirincontainer \
-      --name=$targetcontanername $srcdockerimage;
+      --name=$targetcontanername --hostname $targetcontainerhostname $srcdockerimage;
       docker logs $targetcontanername;
 
    }
