--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1029,10 +1029,10 @@ export EDITOR=vim
 
      for i in {1..500}; do printf "\nPrompt (hit ^D to end the prompt): "; \
       prompt_text=$(</dev/stdin); \
-      printf "\n Prompt: $prompt_text\n" >> $targetfile_gptoutputlog; \
+      printf "\n ==============\nPrompt: $prompt_text\n" >> $targetfile_gptoutputlog; \
       printf "\n ============== \n"; \
       sgpt --chat quicktry "$prompt_text" | tee -a $targetfile_gptoutputlog; \
-      printf " ============ \n"; done;
+      printf " ============ \n" | tee -a $targetfile_gptoutputlog; done;
    }
 
    function install_basic_ubuntu_startertools() {
