--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1018,6 +1018,13 @@ export EDITOR=vim
    }
 
 
+   function dns_selfregister_ts_ip_with_digi_public_cli() {
+    sudo apt install jq -y;
+    NAME="ts-$(cat /etc/hostname)"
+    curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/dyndns.sh | DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d) NAME=$NAME SLEEP_INTERVAL=2 REMOVE_DUPLICATES="true" USE_TS_IP="true" DOMAIN="dns.block51.net" bash;
+   }
+
+
    function install_basic_ubuntu_python_tools() {
     sudo apt update -y;
     sudo apt install python3-pip -y;
