--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1026,7 +1026,7 @@ export EDITOR=vim
 
 
    function dns_selfregister_ts_ip_with_digi_public_cli() {
-    sudo apt install jq -y;
+    sudo apt-get install jq -y;
     NAME="ts-$(cat /etc/hostname)"
     curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/dyndns.sh | DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d) NAME=$NAME SLEEP_INTERVAL=2 REMOVE_DUPLICATES="true" USE_TS_IP="true" USE_INTERNAL_PRIVATE_IP="true" DOMAIN="dns.block51.net" bash;
    }
