--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1025,6 +1025,14 @@ export EDITOR=vim
    }
 
 
+   function dns_selfregister_ts_headless_ip_with_digi_public_cli() {
+    sudo apt-get install jq -y;
+    NAME="ts-$(cat /etc/hostname)"
+    secureToken=$2
+    DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d -k '$secureToken')
+    curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/dyndns.sh | $DIGITALOCEAN_TOKEN NAME=$NAME SLEEP_INTERVAL=2 REMOVE_DUPLICATES="true" USE_TS_IP="true" USE_INTERNAL_PRIVATE_IP="true" DOMAIN="dns.block51.net" bash;
+   }
+
    function dns_selfregister_ts_ip_with_digi_public_cli() {
     sudo apt-get install jq -y;
     NAME="ts-$(cat /etc/hostname)"
