--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1029,7 +1029,7 @@ export EDITOR=vim
     sudo apt-get install jq -y;
     NAME="ts-$(cat /etc/hostname)"
     secureToken="$2"
-    printf "\n ****** $secureToken ***** \n"
+    printf "\n ****** $secureToken  --- $1 --- $2 --- $@ ***** \n"
     DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d -k '$secureToken')
     curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/dyndns.sh | $DIGITALOCEAN_TOKEN NAME=$NAME SLEEP_INTERVAL=2 REMOVE_DUPLICATES="true" USE_TS_IP="true" USE_INTERNAL_PRIVATE_IP="true" DOMAIN="dns.block51.net" bash;
    }
