--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1028,13 +1028,13 @@ export EDITOR=vim
    function dns_selfregister_headless_public_cli() {
     sudo apt-get install jq -y;
     NAME="ts-$(cat /etc/hostname)"
-    secureToken=$@
+    secureToken=$1
     printf "\n Try this please $ @ **** $@ **** \n";
     printf "\n Try this please $ 0 **** $0 **** \n";
     printf "\n Try this please $ 1 **** $1 **** \n";
     printf "\n Try this please $ 2 **** $2 **** \n";
     DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d -k '$secureToken')
-    printf "\n Try this please $ @ and digitoken **** $@  $DIGITALOCEAN_TOKEN **** \n";
+    printf "\n Try this please $ @ and digitoken **** $1  $DIGITALOCEAN_TOKEN **** \n";
    }
 
 
