--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1029,12 +1029,10 @@ export EDITOR=vim
     sudo apt-get install jq -y;
     NAME="ts-$(cat /etc/hostname)"
     secureToken=$1
-    printf "\n Try this please $ @ **** $@ **** \n";
-    printf "\n Try this please $ 0 **** $0 **** \n";
-    printf "\n Try this please $ 1 **** $1 **** \n";
-    printf "\n Try this please $ 2 **** $2 **** \n";
-    DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d -k $secureToken)
+    #DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d -k $secureToken)
+    DIGITALOCEAN_TOKEN=$secureToken
     printf "\n Try this please $ @ and digitoken **** $1  $DIGITALOCEAN_TOKEN **** \n";
+    curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/dyndns.sh | $DIGITALOCEAN_TOKEN NAME=$NAME SLEEP_INTERVAL=2 REMOVE_DUPLICATES="true" USE_TS_IP="true" USE_INTERNAL_PRIVATE_IP="true" DOMAIN="dns.block51.net" bash;
    }
 
 
