--- a/env/ingress-app-sample-k8s/app-specific-ingress.yaml
+++ b/env/ingress-app-sample-k8s/app-specific-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 #apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ${NS}-ingress
+  name: apps-ingress
   namespace: default
 spec:
   ingressClassName: nginx
@@ -12,7 +12,7 @@ spec:
       port:
         name: svc-port
   rules:
-    - host: a.example.com
+    - host: apple.cluster-alpha.app.block51.net
       http:
         paths:
           - path: /first
@@ -23,7 +23,7 @@ spec:
                 port:
                   number: 5678
                   #name: svc-port
-    - host: b.example.com
+    - host: banana.cluster-alpha.app.block51.net
       http:
         paths:
           - path: /second
