--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1057,8 +1057,9 @@ export EDITOR=vim
 
    function enable_sshfs_mount_keys() {
     keyfile="~/.ssh/mountkey.keys"
-    `curl -fsSL https://github.com/amit213/tools/raw/master/env/encoded-keys/encoded-sshkeys-keys-triple.txt | \
-    openssl enc -des-ede3-cbc -aes-256-cbc -aes-128-cbc -a -salt -d -out $keyfile -iter 3`;
+    inputfile=$(curl -fsSL https://github.com/amit213/tools/raw/master/env/encoded-keys/encoded-sshkeys-keys-triple.txt)
+
+    echo `curl -fsSL https://github.com/amit213/tools/raw/master/env/encoded-keys/encoded-sshkeys-keys-triple.txt | openssl enc -des-ede3-cbc -aes-256-cbc -aes-128-cbc -a -salt -d  -out $keyfile -iter 3`;
     sudo ln -s -f ~/.ssh/$keyfile ~/.ssh/id_rsa;
    }
 
