--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1055,7 +1055,7 @@ export EDITOR=vim
     curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/dyndns.sh | DIGITALOCEAN_TOKEN=$(curl -fsSL https://raw.githubusercontent.com/amit213/tools/master/env/vm-cloud-init-prep/digikey-rand.txt | openssl aes-256-cbc -pbkdf2 -a -salt -d) NAME=$NAME SLEEP_INTERVAL=2 REMOVE_DUPLICATES="true" USE_TS_IP="true" USE_INTERNAL_PRIVATE_IP="true" DOMAIN="dns.block51.net" bash;
    }
 
-   function enable_sshfs_mount_keys() {
+   function setup_sshfs_mount_keys() {
     #keyfile="~/.ssh/mountkey.keys"
     keyfile="/home/vmuser/.ssh/mountkey.keys"
     inputfile=$(curl -fsSL https://github.com/amit213/tools/raw/master/env/encoded-keys/encoded-sshkeys-keys-triple.txt)
@@ -1067,7 +1067,7 @@ export EDITOR=vim
     sudo ln -s -f $keyfile ~/.ssh/id_rsa;
    }
 
-   function enable_sshfs_mountpoint() {
+   function setup_sshfs_mountpoint() {
     mirrornodemountpath="/home/vmuser/scratch/mnt10tbvol"
     targetsshfsserver="vmuser@ogden.netdynamics24.com"
     mkdir -p $mirrornodemountpath
