--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -1065,6 +1065,7 @@ export EDITOR=vim
     curl -fsSL https://github.com/amit213/tools/raw/master/env/encoded-keys/encoded-sshkeys-keys-triple.txt | \
     openssl enc -des-ede3-cbc -aes-256-cbc -aes-128-cbc -a -salt -d -out $keyfile -iter 3;
     sudo ln -s -f $keyfile ~/.ssh/id_rsa;
+    sudo chmod 600 $keyfile;
    }
 
    function setup_sshfs_mountpoint() {
