--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -678,14 +678,36 @@ export EDITOR=vim
      alias tt='run_tgpt_ai_cycle'
      alias aichat.headlines='run_perplexity_ai_search_cycle'
      alias aichat.perplexity-online='aichat -m openrouter:perplexity/llama-3.1-sonar-large-128k-online'
+     alias aichat.perplexity-sonar405b-online='aichat -m openrouter:perplexity/llama-3.1-sonar-huge-128k-online'
+     alias aichat.perplexity-sonar70b-online='aichat -m openrouter:perplexity/llama-3.1-sonar-large-128k-online'
+     alias aichat.perplexity-sonar8b-online='aichat -m openrouter:perplexity/llama-3.1-sonar-small-128k-online'
+     alias aichat.perplexity-sonar70b-online='aichat -m openrouter:perplexity/llama-3-sonar-large-32k-online'
      alias aichat.gemini-flash1.5='aichat -m openrouter:google/gemini-flash-1.5'
      alias aichat.gemini-pro1.5-free='aichat -m openrouter:google/gemini-pro-1.5-exp'
      alias aichat.gemma-9b-free='aichat -m openrouter:google/gemma-2-9b-it:free'
      alias aichat.gemini-vision-pro1='aichat -m openrouter:google/gemini-pro-vision'
      alias aichat.gemini-vision-pro1.5='aichat -m openrouter:google/gemini-pro-1.5'
+     alias aichat.claude3.5-sonnet='aichat -m openrouter:anthropic/claude-3.5-sonnet'
      alias aichat.claude3.5-sonnet-self='aichat -m openrouter:anthropic/claude-3.5-sonnet:beta'
      alias aichat.claude3-haiku-self='aichat -m openrouter:anthropic/claude-3-haiku:beta'
      alias aichat.llama3.2-11b-vision-free='aichat -m openrouter:meta-llama/llama-3.2-11b-vision-instruct:free'
+     alias aichat.llama3.2-3b-instruct-free='aichat -m openrouter:meta-llama/llama-3.2-3b-instruct:free'
+     alias aichat.llama3.1-70b-instruct-free='aichat -m openrouter:meta-llama/llama-3.1-70b-instruct:free'
+     alias aichat.llama3.1-405b-instruct-free='aichat -m openrouter:meta-llama/llama-3.1-405b-instruct:free'
+     alias aichat.o1-mini-2024='aichat -m openrouter:openai/o1-mini-2024-09-12'
+     alias aichat.o1-min='aichat -m openrouter:openai/o1-mini'
+     alias aichat.o1-preview-expensive='aichat -m openrouter:openai/o1-preview-2024-09-12'
+     alias aichat.o1-preview='aichat -m openrouter:openai/o1-preview'
+     alias aichat.gpt4o-2024-aug='aichat -m openrouter:openai/gpt-4o-2024-08-06'
+     alias aichat.gpt4o-mini='aichat -m openrouter:openai/gpt-4o-mini'
+     alias aichat.gpt4o='aichat -m openrouter:openai/gpt-4o'
+     alias aichat.gpt4o-extended='aichat -m openrouter:openai/gpt-4o:extended'
+     alias aichat.auto='aichat -m openrouter:openrouter/auto'
+     alias aichat.xgrok='aichat -m openrouter:x-ai/grok-beta'
+     alias aichat.nvidia-nemotron70b-instruct='aichat -m openrouter:nvidia/llama-3.1-nemotron-70b-instruct'
+     alias aichat.rocinante='aichat -m openrouter:thedrummer/rocinante-12b'
+     alias aichat.mistral-nemo='aichat -m openrouter:mistralai/mistral-nemo'
+     alias aichat.palm2-code='aichat -m openrouter:google/palm-2-codechat-bison-32k'
 
 
    }
