--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -688,7 +688,7 @@ export EDITOR=vim
      alias aichat.gemma-9b-free='aichat -m openrouter:google/gemma-2-9b-it:free'
      alias aichat.gemma-27b='aichat -m openrouter:google/gemma-2-27b-it'
      alias aichat.gemini-vision-pro1='aichat -m openrouter:google/gemini-pro-vision'
-     alias aichat.gemini-vision-pro1.5='aichat -m openrouter:google/gemini-pro-1.5'
+     alias aichat.gemini-pro1.5='aichat -m openrouter:google/gemini-pro-1.5'
      alias aichat.gemini-pro1='aichat -m openrouter:google/gemini-pro'
      alias aichat.claude3.5-sonnet='aichat -m openrouter:anthropic/claude-3.5-sonnet'
      alias aichat.claude3.5-sonnet-self='aichat -m openrouter:anthropic/claude-3.5-sonnet:beta'
